--- a/index.html
+++ b/index.html
@@ -1,82 +1,79 @@
-<!doctype html>
-<html lang="en-us">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <title>Daniel Murillo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-       <!-- <link rel="stylesheet" type="text/css" href= "assets/css/reset.css"> -->
-        <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-      <!-- Optional theme -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-       <link href="navbar.css" rel="stylesheet">
-
-      <!-- Latest compiled and minified JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-       
-       <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-      <link rel="stylesheet" type="text/css" href= "assets/css/style.css">
-</head>
+<!DOCTYPE html>
+<html lang = "en-us">
 <body>
 
-<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Portfolio | Daniel Murillo</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="portfolio.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-                    </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
- 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
-      <img src="assets/images/MyPicture.jpg" class="auth-image" class="img-circle" alt="Daniel Murillo">
-      <p class="bg-success">Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
-      <p class="bg-success">Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
-    </section>
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
-  </div>
-  <footer>
-    <div class="container">
-      Copyright &copy; 2017 Daniel Murillo
-    </div>
-  </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+    <h1>The Psychic Game</h1>
+    <h3>Guess what letter I'm thinking of: </h3>
+     <h3>Wins:
+      <p id="wins"></p>
+    </h3>
+    <h3>Losses:
+      <p id="loses"></p>
+    </h3>
+    <h3>Guess left:
+      <p id="guessLeft"></p>
+    </h3>
+   <h3>Your guesses so far: </h3>
+    <p id="guessed"></p>
+    
+  
+  </body>
+<script>
+
+var letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'];
+var wins = 0;
+var loses = 0;
+var guessesLeft, guessedLetters, letterToGuess;
+
+resetGame();
+display();
+
+document.onkeyup = function(event) {
+  var guess = event.key;
+  if (guess === letterToGuess) {
+    win();
+  } else if (guessesLeft - 1 === 0) {
+    lost();
+  } else {
+    fail(guess);
+  }
+
+  display();
+}
+
+function display() {
+  var winsP = document.getElementById("wins");
+  var losesP = document.getElementById("loses");
+  var guessLeft = document.getElementById("guessLeft");
+  var letterGuessed = document.getElementById("guessed");
+  winsP.innerHTML = wins;
+  losesP.innerHTML = loses;
+  guessLeft.innerHTML = guessesLeft;
+  letterGuessed.innerHTML = guessedLetters.join(',');
+}
+
+function win() {
+  wins++;
+  resetGame();
+}
+
+function lost() {
+  loses++;
+  resetGame();
+}
+
+function fail(letter) {
+  guessesLeft--;
+  guessedLetters.push(letter);
+}
+
+function resetGame() {
+  guessesLeft = 9;
+  guessedLetters = [];
+  letterToGuess = letters[Math.floor(Math.random() * letters.length)];
+  console.log("Letter to guess: " + letterToGuess);
+}
+</script>
+
 </html>
