--- a/index.html
+++ b/index.html
@@ -1,86 +1,27 @@
 <!DOCTYPE html>
+<html lang ="en">
 
+	<head>
+	  <meta charset="utf-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <title>Giphy</title>
+	  		<!-- Latest compiled and minified CSS -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<head>
-	<title> Trivia Game </title>
-	<link rel="stylesheet" type="text/css" href= "assets/css/style.css">
-</head>
-	
-<html>
-		
-		<div id="main">
-			<h1> Totally Trivial Trivia! </h1>
-		
+			<!-- Optional theme -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	</head>
 	<body>
+		<input type="text" id="input" placeholder="add comedy movie">
+		<input type="button" id = "add" value="submit"> 
+		<div id = "buttonsDiv"> </div>
+		<div id = "gifs">  </div>
+		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<script type = "text/javascript" src="giphy.js"> </script>
 
-				<p id="timer"> ____ </p>
-
-				<h2> 1. What is the highest sold item at Wal Mart? </h2>
-			<form id="form1" action=" ">
-					<input type="radio" name="q1" value="1"> Bananas <!-- correct answer -->
-					<input type="radio" name="q1" value="0"> Soda
-					<input type="radio" name="q1" value="0"> Toothpaste
-					<input type="radio" name="q1" value="0"> Eggs 
-
-				 <h2> 2. What is professional wrestler John Cena's famous catchphrase? </h2>
-			
-					<input type="radio" name="q2" value="0"> "Owww have mercy!"
-					<input type="radio" name="q2" value="0"> "Hey there tough guy!"
-					<input type="radio" name="q2" value="1"> "You can't see me!" <!-- correct answer -->
-					<input type="radio" name="q2" value="0"> "You can't touch this!" 
-
-				 <h2> 3. In what place was Christmas once illegal? </h2>
-			
-					<input type="radio" name="q3" value="0"> Brazil
-					<input type="radio" name="q3" value="1"> England <!-- correct answer -->
-					<input type="radio" name="q3" value="0"> France
-					<input type="radio" name="q3" value="0"> Russia 
-
-				 <h2> 4. What year did Albert Einstein Die? </h2>
-			
-					<input type="radio" name="q4" value="0"> 1954
-					<input type="radio" name="q4" value="0"> 1949
-					<input type="radio" name="q4" value="0"> 1960
-					<input type="radio" name="q4" value="1"> 1955 <!-- correct answer -->
-		
-				<h2> 5. Who invented Penicillin? </h2>
-			
-					<input type="radio" name="q5" value="1"> Alexandra Fleming  <!-- correct answer -->
-					<input type="radio" name="q5" value="0"> Thomas Edison
-					<input type="radio" name="q5" value="0"> Marie Curie
-					<input type="radio" name="q5" value="0"> George Orwell 
-
-				<h2> 6. What date was President John F Kennedy assassinated? </h2>
-			
-					<input type="radio" name="q6" value="0"> November 22 1962
-					<input type="radio" name="q6" value="1"> November 22 1963 <!-- correct answer -->
-					<input type="radio" name="q6" value="0"> October 29 1964
-					<input type="radio" name="q6" value="0"> November 24 1962 
-
-			    <h2> 7. What is the currency of Brazil? </h2>
-			
-					<input type="radio" name="q7" value="0"> Dollar
-					<input type="radio" name="q7" value="0"> The Bhat
-					<input type="radio" name="q7" value="1"> Real <!-- correct answer -->
-					<input type="radio" name="q7" value="0"> Krona 
-
-				<h2> 8. Who has won the most Academy Awards? </h2>
-			
-					<input type="radio" name="q8" value="0"> James Cameron
-					<input type="radio" name="q8" value="1"> Walt Disney <!-- correct answer -->
-					<input type="radio" name="q8" value="0"> Katherine Hepburn
-					<input type="radio" name="q8" value="0"> Steven Spielberg 
-
-			</form>
-				
- 	 	
-			<p> Your score is: <span id="grade">__</span></p>
-			<p id="grade2"></p>
-			</div>	
-	<script type="text/javascript" src="assets/javascript/app.js"> </script>
-	<!-- <script src="//code.jquery.com/jquery-2.2.0.js"> </script> -->
-	</script>
-
-	</body>
-
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
 </html>
