--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id = "buttonsDiv"> </div>
 		<div id = "gifs">  </div>
 		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script type = "text/javascript" src="giphy.js"> </script>
+		<script type = "text/javascript" src="assets/javascript/giphy.js"> </script>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
